Enhance error handling framework: introduce new error resolution pipeline with interceptors for tracing, metrics, and circuit breaking, refactor existing components for improved error mapping and observation capabilities.