@@ -1,9 +1,10 @@
 package com.patra.starter.feign.error.decoder;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.patra.common.error.problem.ErrorKeys;
 import com.patra.starter.feign.error.config.FeignErrorProperties;
 import com.patra.starter.feign.error.exception.RemoteCallException;
-import com.patra.starter.feign.error.metrics.FeignErrorMetrics;
+import com.patra.starter.feign.error.observation.FeignErrorObservationRecorder;
 import feign.FeignException;
 import feign.Response;
 import feign.codec.ErrorDecoder;
@@ -11,254 +12,195 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.ProblemDetail;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.charset.StandardCharsets;
 import java.util.Collection;
+import java.util.concurrent.TimeUnit;
 
 /**
- * 将下游服务错误响应解码为 {@link com.patra.starter.feign.error.exception.RemoteCallException} 的 Feign 错误解码器。
- *
- * <p>支持符合 RFC 7807 的 {@link org.springframework.http.ProblemDetail} 响应；
- * 对非标准/畸形响应在“宽容模式”下进行优雅兜底；必要时退回 {@link feign.FeignException}。
- *
- * <p>特性：
- * - 自动解析 {@link ProblemDetail} 并转换为领域内统一异常
- * - 宽容模式（tolerant）保障异常/非 JSON/空体的健壮处理
- * - 从响应头提取 TraceId，便于调用链路关联
- * - 受配置限制的响应体读取大小，避免内存风险
- * - 全程打点 {@link com.patra.starter.feign.error.metrics.FeignErrorMetrics}
- *
- * @author linqibin
- * @since 0.1.0
- * @see com.patra.starter.feign.error.config.FeignErrorProperties 配置项
- * @see com.patra.starter.feign.error.metrics.FeignErrorMetrics 指标采集
- * @see feign.codec.ErrorDecoder Feign 解码 SPI
+ * 基于 {@link ProblemDetail} 的 Feign 错误解码器。
  */
 @Slf4j
 public class ProblemDetailErrorDecoder implements ErrorDecoder {
-    
+
     private final ObjectMapper objectMapper;
     private final FeignErrorProperties properties;
-    private final FeignErrorMetrics feignErrorMetrics;
-    
-    /**
-     * 构造函数。
-     *
-     * @param objectMapper Jackson 的 JSON 解析器
-     * @param properties Feign 错误处理配置
-     * @param feignErrorMetrics Feign 错误处理指标采集器
-     */
-    public ProblemDetailErrorDecoder(ObjectMapper objectMapper, FeignErrorProperties properties, 
-                                   FeignErrorMetrics feignErrorMetrics) {
+    private final FeignErrorObservationRecorder observationRecorder;
+
+    public ProblemDetailErrorDecoder(ObjectMapper objectMapper,
+                                     FeignErrorProperties properties,
+                                     FeignErrorObservationRecorder observationRecorder) {
         this.objectMapper = objectMapper;
         this.properties = properties;
-        this.feignErrorMetrics = feignErrorMetrics;
+        this.observationRecorder = observationRecorder;
     }
-    
-    /**
-     * 将 Feign 错误响应解码为合适的异常对象。
-     *
-     * @param methodKey 触发本次调用的 Feign 方法键
-     * @param response 下游服务返回的错误响应
-     * @return 代表错误语义的异常实例
-     */
+
     @Override
     public Exception decode(String methodKey, Response response) {
-        log.debug("Decoding remote error response: method={}, status={}", methodKey, response.status());
-        
         boolean decodingSuccess = false;
         boolean tolerantModeUsed = false;
-        
+        BodyBuffer bodyBuffer = null;
+
         try {
-            // Detect content type and record metrics
             String contentType = getContentType(response);
-            boolean isProblemDetail = isProblemDetailResponse(response);
-            feignErrorMetrics.recordContentTypeDetection(methodKey, contentType, isProblemDetail);
-            
-            // Try ProblemDetail parsing first
+            boolean isProblemDetail = isProblemDetailResponse(contentType);
+            log.debug("解码远端错误: method={} status={} contentType={}", methodKey, response.status(), contentType);
+
             if (isProblemDetail) {
-                long parseStartTime = System.currentTimeMillis();
-                ProblemDetail problemDetail = parseProblemDetailSafely(response);
-                long parseTime = System.currentTimeMillis() - parseStartTime;
-                
-                boolean parseSuccess = problemDetail != null;
-                feignErrorMetrics.recordProblemDetailParsing(methodKey, response.status(), parseSuccess, parseTime);
-                
-                if (parseSuccess) {
-                    log.debug("Parsed ProblemDetail successfully: method={}", methodKey);
+                bodyBuffer = readResponseBody(methodKey, response);
+                ParsingResult parsingResult = parseProblemDetail(bodyBuffer);
+                observationRecorder.recordProblemDetailParsing(methodKey, response.status(),
+                        parsingResult.durationMs(), parsingResult.success());
+
+                if (parsingResult.success() && parsingResult.problemDetail() != null) {
+                    ProblemDetail problemDetail = parsingResult.problemDetail();
                     decodingSuccess = true;
-                    
-                    // Record trace id extraction
-                    String traceId = extractTraceId(response);
-                    feignErrorMetrics.recordTraceIdExtraction(methodKey, traceId != null, 
-                                                            traceId != null ? "response_header" : null);
-                    
+
+                    TraceExtraction traceExtraction = extractTraceId(response);
+                    observationRecorder.recordTraceIdExtraction(methodKey,
+                            traceExtraction.traceId() != null, traceExtraction.headerName());
+                    if (traceExtraction.traceId() != null
+                            && (problemDetail.getProperties() == null
+                            || problemDetail.getProperties().get(ErrorKeys.TRACE_ID) == null)) {
+                        problemDetail.setProperty(ErrorKeys.TRACE_ID, traceExtraction.traceId());
+                    }
+
                     return new RemoteCallException(problemDetail, methodKey);
                 }
             }
-            
-            // Non-ProblemDetail response: handle based on tolerant/strict mode
+
             if (properties.isTolerant()) {
                 tolerantModeUsed = true;
-                decodingSuccess = true;
-                return handleTolerantMode(methodKey, response);
-            } else {
-                log.debug("Strict mode: fallback to FeignException, method={}", methodKey);
-                return FeignException.errorStatus(methodKey, response);
+                if (bodyBuffer == null) {
+                    bodyBuffer = readResponseBody(methodKey, response);
+                }
+                return handleTolerantMode(methodKey, response, bodyBuffer);
             }
-            
-        } catch (Exception e) {
-            log.warn("Failed to decode remote error response, method={}, error={}", methodKey, e.getMessage());
-            
+
+            log.debug("严格模式：回退为 FeignException，method={}", methodKey);
+            return FeignException.errorStatus(methodKey, response);
+
+        } catch (Exception ex) {
+            log.warn("解码远端错误失败: method={} status={} error={}",
+                    methodKey, response.status(), ex.getMessage());
+
             if (properties.isTolerant()) {
                 tolerantModeUsed = true;
-                decodingSuccess = true;
-                
-                String traceId = extractTraceId(response);
-                feignErrorMetrics.recordTraceIdExtraction(methodKey, traceId != null, 
-                                                        traceId != null ? "response_header" : null);
-                
-                return new RemoteCallException(
-                    response.status(),
-                    "Error decoding failed: " + e.getMessage(),
-                    methodKey,
-                    traceId
-                );
-            } else {
-                return FeignException.errorStatus(methodKey, response);
+                try {
+                    if (bodyBuffer == null) {
+                        bodyBuffer = readResponseBody(methodKey, response);
+                    }
+                } catch (IOException ioException) {
+                    log.debug("宽容模式下读取响应体失败: method={} error={}", methodKey, ioException.getMessage());
+                }
+                return handleTolerantMode(methodKey, response, bodyBuffer);
             }
+
+            return FeignException.errorStatus(methodKey, response);
         } finally {
-            // Record overall decoding success
-            feignErrorMetrics.recordErrorDecodingSuccess(methodKey, response.status(), 
-                                                       decodingSuccess, tolerantModeUsed);
+            observationRecorder.recordDecodingOutcome(methodKey, response.status(), decodingSuccess, tolerantModeUsed);
         }
     }
-    
-    /**
-     * 宽容模式下的兜底处理，针对多种非标准响应提供温和降级。
-     */
-    private RemoteCallException handleTolerantMode(String methodKey, Response response) {
-        String traceId = extractTraceId(response);
-        String message = buildFallbackMessage(response);
-        
-        log.debug("Tolerant mode: creating RemoteCallException, method={}, status={}", methodKey, response.status());
-        
-        return new RemoteCallException(response.status(), message, methodKey, traceId);
+
+    private RemoteCallException handleTolerantMode(String methodKey, Response response, BodyBuffer bodyBuffer) {
+        TraceExtraction traceExtraction = extractTraceId(response);
+        observationRecorder.recordTraceIdExtraction(methodKey,
+                traceExtraction.traceId() != null, traceExtraction.headerName());
+
+        String message = buildFallbackMessage(response, bodyBuffer);
+        return new RemoteCallException(response.status(), message, methodKey, traceExtraction.traceId());
     }
-    
-    /**
-     * 从响应中构建兜底的错误消息。
-     */
-    private String buildFallbackMessage(Response response) {
+
+    private ParsingResult parseProblemDetail(BodyBuffer bodyBuffer) {
+        if (bodyBuffer == null || bodyBuffer.content() == null || bodyBuffer.content().isBlank()) {
+            return new ParsingResult(null, 0L, false);
+        }
+
+        long start = System.nanoTime();
+        try {
+            ProblemDetail problemDetail = objectMapper.readValue(bodyBuffer.content(), ProblemDetail.class);
+            long durationMs = TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - start);
+            log.debug("成功解析 ProblemDetail，status={}", problemDetail.getStatus());
+            return new ParsingResult(problemDetail, durationMs, true);
+        } catch (Exception ex) {
+            long durationMs = TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - start);
+            log.debug("ProblemDetail 解析失败: {}", ex.getMessage());
+            return new ParsingResult(null, durationMs, false);
+        }
+    }
+
+    private BodyBuffer readResponseBody(String methodKey, Response response) throws IOException {
+        if (response.body() == null) {
+            return BodyBuffer.empty();
+        }
+
+        long start = System.nanoTime();
+        int maxSize = properties.getMaxErrorBodySize();
+        byte[] bytes;
+        try (InputStream inputStream = response.body().asInputStream()) {
+            bytes = inputStream.readNBytes(maxSize + 1);
+        }
+        long durationMs = TimeUnit.NANOSECONDS.toMillis(System.nanoTime() - start);
+
+        boolean truncated = bytes.length > maxSize;
+        int effectiveLength = Math.min(bytes.length, maxSize);
+        String content = new String(bytes, 0, effectiveLength, StandardCharsets.UTF_8);
+
+        observationRecorder.recordResponseBodyRead(methodKey, effectiveLength, durationMs, truncated);
+        return new BodyBuffer(content, effectiveLength, truncated);
+    }
+
+    private String buildFallbackMessage(Response response, BodyBuffer bodyBuffer) {
         String reason = response.reason();
-        if (reason != null && !reason.trim().isEmpty()) {
+        if (reason != null && !reason.isBlank()) {
             return reason;
         }
-        
-        // Read a small portion of body for context
-        try {
-            String body = readResponseBodySafely(response);
-            if (body != null && !body.trim().isEmpty()) {
-                // Truncate long body for readability
-                if (body.length() > 200) {
-                    body = body.substring(0, 200) + "...";
-                }
-                return "HTTP " + response.status() + ": " + body;
+
+        if (bodyBuffer != null && bodyBuffer.content() != null && !bodyBuffer.content().isBlank()) {
+            String content = bodyBuffer.content();
+            if (content.length() > 200) {
+                content = content.substring(0, 200) + "...";
             }
-        } catch (Exception e) {
-                log.debug("Failed to read response body for fallback message: {}", e.getMessage());
+            return "HTTP " + response.status() + ": " + content;
         }
-        
+
         return "HTTP " + response.status();
     }
-    
-    /**
-     * 安全地从响应体解析 {@link ProblemDetail}。
-     * 若解析失败或响应体为空/非法，返回 {@code null}。
-     */
-    private ProblemDetail parseProblemDetailSafely(Response response) {
-        try {
-            String body = readResponseBodySafely(response);
-            if (body == null || body.trim().isEmpty()) {
-            log.debug("Empty response body; cannot parse ProblemDetail");
-                return null;
-            }
-            
-            ProblemDetail problemDetail = objectMapper.readValue(body, ProblemDetail.class);
-            log.debug("Successfully parsed ProblemDetail with status={}", problemDetail.getStatus());
-            return problemDetail;
-            
-        } catch (Exception e) {
-            log.debug("Failed to parse ProblemDetail: {}", e.getMessage());
-            return null;
-        }
-    }
-    
-    /**
-     * 在大小限制与错误处理保护下安全读取响应体。
-     */
-    private String readResponseBodySafely(Response response) throws IOException {
-        if (response.body() == null) {
-            return null;
-        }
-        
-        long readStartTime = System.currentTimeMillis();
-        
-        // Read with configured max bytes to avoid memory risk
-        byte[] bodyBytes = response.body().asInputStream().readNBytes(properties.getMaxErrorBodySize());
-        String body = new String(bodyBytes, StandardCharsets.UTF_8);
-        
-        long readTime = System.currentTimeMillis() - readStartTime;
-        boolean truncated = bodyBytes.length >= properties.getMaxErrorBodySize();
-        
-        // Record response body reading metrics
-        feignErrorMetrics.recordResponseBodyReading("unknown", bodyBytes.length, readTime, truncated);
-        
-        return body;
-    }
-    
-    /**
-     * Determine if response is ProblemDetail by Content-Type.
-     */
-    private boolean isProblemDetailResponse(Response response) {
-        String contentType = getContentType(response);
-        return contentType != null && contentType.toLowerCase().contains("application/problem+json");
-    }
-    
-    /**
-     * Get Content-Type from response headers.
-     */
-    private String getContentType(Response response) {
-        Collection<String> contentTypes = response.headers().get("content-type");
-        if (contentTypes == null) {
-            contentTypes = response.headers().get("Content-Type");
-        }
-        
-        if (contentTypes != null && !contentTypes.isEmpty()) {
-            return contentTypes.iterator().next();
-        }
-        
-        return null;
-    }
-    
-    /**
-     * Extract TraceId from common response headers for correlation.
-     */
-    private String extractTraceId(Response response) {
-        // Try common trace headers in order
-        String[] traceHeaders = {"traceId", "X-B3-TraceId", "traceparent", "X-Trace-Id"};
-        
-        for (String header : traceHeaders) {
+
+    private TraceExtraction extractTraceId(Response response) {
+        String[] headers = {"traceId", "X-B3-TraceId", "traceparent", "X-Trace-Id"};
+        for (String header : headers) {
             Collection<String> values = response.headers().get(header);
             if (values != null && !values.isEmpty()) {
                 String traceId = values.iterator().next();
                 if (traceId != null && !traceId.trim().isEmpty()) {
-                    log.debug("Extracted TraceId from header {}: {}", header, traceId);
-                    return traceId.trim();
+                    return new TraceExtraction(traceId.trim(), header);
                 }
             }
         }
-        
-        log.debug("No TraceId found in response headers");
+        return new TraceExtraction(null, null);
+    }
+
+    private String getContentType(Response response) {
+        Collection<String> contentTypes = response.headers().get("content-type");
+        if (contentTypes == null || contentTypes.isEmpty()) {
+            contentTypes = response.headers().get("Content-Type");
+        }
+        if (contentTypes != null && !contentTypes.isEmpty()) {
+            return contentTypes.iterator().next();
+        }
         return null;
     }
+
+    private boolean isProblemDetailResponse(String contentType) {
+        return contentType != null && contentType.toLowerCase().contains("application/problem+json");
+    }
+
+    private record BodyBuffer(String content, int length, boolean truncated) {
+        static BodyBuffer empty() { return new BodyBuffer(null, 0, false); }
+    }
+
+    private record ParsingResult(ProblemDetail problemDetail, long durationMs, boolean success) { }
+
+    private record TraceExtraction(String traceId, String headerName) { }
 }
